some new Changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="login">LOGIN</string>
 
     <string name="english">عربي</string>
+    <string name="product_price">"QAR : "</string>
 
 </resources>
