--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -10,4 +10,5 @@
     <string name="login">LOGIN</string>
 
     <string name="english">English</string>
+    <string name="product_price">"QAR : "</string>
 </resources>
